--- a/Cropper.Plugins/TwitPic/TwitPic.csproj
+++ b/Cropper.Plugins/TwitPic/TwitPic.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3D524BF5-8CF8-4586-A6A3-49F767A44794}</ProjectGuid>
+    <ProjectGuid>{e0b2ec2a-c9e0-46a8-91ec-5cf3cec08bd7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cropper.TFSWorkItem</RootNamespace>
-    <AssemblyName>Cropper.TFSWorkItem</AssemblyName>
+    <RootNamespace>Cropper.SendToTwitPic</RootNamespace>
+    <AssemblyName>Cropper.SendToTwitPic</AssemblyName>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
@@ -18,6 +18,7 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -33,6 +34,8 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkSubset>
+    </TargetFrameworkSubset>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -59,6 +62,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
@@ -69,120 +73,45 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Cropper.Extensibility, Version=1.9.1.89, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependencies\Cropper.Extensibility.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Microsoft.TeamFoundation, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" >
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 9.0\Common7\IDE\PrivateAssemblies\Microsoft.TeamFoundation.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.TeamFoundation.Client, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" >
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 9.0\Common7\IDE\PrivateAssemblies\Microsoft.TeamFoundation.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.TeamFoundation.WorkItemTracking.Client, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" >
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 9.0\Common7\IDE\PrivateAssemblies\Microsoft.TeamFoundation.WorkItemTracking.Client.dll</HintPath>
-    </Reference>
-
-    <Reference Include="Microsoft.TeamFoundation.WorkItemTracking.Controls, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" >
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 9.0\Common7\IDE\PrivateAssemblies\Microsoft.TeamFoundation.WorkItemTracking.Controls.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
+    <Reference Include="Microsoft.Http"/>
+    <Reference Include="Microsoft.Http.Extensions"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="AttachDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AttachDialog.Designer.cs">
-      <DependentUpon>AttachDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="OptionsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="OptionsForm.Designer.cs">
-      <DependentUpon>OptionsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SelectWorkItemForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SelectWorkItemForm.Designer.cs">
-      <DependentUpon>SelectWorkItemForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TfsSettings.cs" />
-    <Compile Include="TFS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkItemEditorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WorkItemEditorForm.Designer.cs">
-      <DependentUpon>WorkItemEditorForm.cs</DependentUpon>
+    <Compile Include="Plugin.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="..\Utils\Tracing.cs">
       <Link>Tracing.cs</Link>
     </Compile>
+    <Compile Include="TwitPicOptionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TwitPicOptionsForm.Designer.cs">
+      <DependentUpon>TwitPicOptionsForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AttachDialog.resx">
+    <EmbeddedResource Include="TwitPicOptionsForm.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>AttachDialog.cs</DependentUpon>
+      <DependentUpon>TwitPicOptionsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OptionsForm.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>OptionsForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <SubType>Designer</SubType>
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SelectWorkItemForm.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>SelectWorkItemForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="WorkItemEditorForm.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>WorkItemEditorForm.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Project.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\disk.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\folder_image.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\arrow_refresh.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\folder_brick.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ReadMe-TFS.htm">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
