--- a/Cropper.Plugins/AnimatedGif/Plugin/AnimatedGif.csproj
+++ b/Cropper.Plugins/AnimatedGif/Plugin/AnimatedGif.csproj
@@ -119,6 +119,9 @@
     <Compile Include="..\..\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="..\..\Utils\Tracing.cs">
+      <Link>Tracing.cs</Link>
+    </Compile>
     <Compile Include="Plugin.cs">
       <SubType>Code</SubType>
     </Compile>
