--- a/Cropper.Plugins/Facebook/makefile.flymake
+++ b/Cropper.Plugins/Facebook/makefile.flymake
@@ -2,7 +2,15 @@
 _CSC=c:\.net3.5\csc.exe
 LIBSREF=/R:..\Dependencies\Cropper.Extensibility.dll
 
-CS_SOURCE=Plugin.cs FacebookSettings.cs FacebookOptionsForm.Designer.cs FacebookOptionsForm.cs Properties\AssemblyInfo.cs Properties\Resources.Designer.cs ..\SolutionInfo.cs ..\Utils\Tracing.cs
+CS_SOURCE=Plugin.cs \
+        FacebookSettings.cs \
+        FacebookOptionsForm.Designer.cs \
+        FacebookOptionsForm.cs \
+        Properties\AssemblyInfo.cs \
+        Properties\Resources.Designer.cs \
+        ..\SolutionInfo.cs \
+        ..\Common\Tracing.cs \
+        ..\Common\IUpload.cs
 
 
 check-syntax:
